<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:inputType="textCapWords"
            android:hint="@string/Name"/>

        <TextView
            android:text="@string/toppings"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            style="@style/HeaderTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:id="@+id/checkbox_hasWhippedCream"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/whipped_cream"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:id="@+id/checkbox_hasChocolate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/chocolate"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:text="@string/quantity"
            style="@style/HeaderTextStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:textSize="16sp"
                android:onClick="decrement"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textSize="16sp"
                android:id="@+id/quantity_text_view"
                android:textColor="@android:color/black"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:textSize="16sp"
                android:onClick="increment"/>

        </LinearLayout>

        <TextView
            android:text="@string/order_summary"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            style="@style/HeaderTextStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:id="@+id/order_summary_text_view"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_text_view"
            android:text="@string/order"
            android:textSize="16sp"
            android:onClick="submitOrder"/>

    </LinearLayout>

</ScrollView>
